tests/ui/higher-ranked-trait-bounds/higher-trait-bounds-ice-60218.stderr
error[E0277]: the trait bound `&u32: Foo` is not satisfied
  --> $DIR/higher-trait-bounds-ice-60218.rs:19:19
   |
LL |     trigger_error(vec![], |x: &u32| x)
   |     ------------- ^^^^^^ the trait `Foo` is not implemented for `&u32`
   |     |
   |     required by a bound introduced by this call
   |
help: this trait has no implementations, consider adding one
  --> $DIR/higher-trait-bounds-ice-60218.rs:8:1
   |
LL | pub trait Foo {}
   | ^^^^^^^^^^^^^
note: required by a bound in `trigger_error`
  --> $DIR/higher-trait-bounds-ice-60218.rs:14:72
   |
LL | pub fn trigger_error<I, F>(iterable: I, functor: F)
   |        ------------- required by a bound in this function
...
LL | for<'t> <Map<<&'t I as IntoIterator>::IntoIter, F> as Iterator>::Item: Foo,
   |                                                                        ^^^ required by this bound in `trigger_error`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
